--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="standard">16dp</dimen>
     <dimen name="large">24dp</dimen>
     <dimen name="xLarge">32dp</dimen>
+    <dimen name="xxLarge">48dp</dimen>
 
     <dimen name="list_item_image">56dp</dimen>
     <dimen name="next_page_indicator">48dp</dimen>
     <dimen name="details_map">250dp</dimen>
+    <dimen name="login_logo">250dp</dimen>
 </resources>
